# RAG-CPU

./: .gitignore  AGENTS.md  LICENSE  MODEL_STACK.md  README.md  pyproject.toml  rus_rag_local_architecture.md
app/: cleanup.py  main.py
app/api/: deps.py
app/api/routes/: auth.py  chats.py  ui.py
app/core/: settings.py
app/db/: session.py
app/schemas/: auth.py  chat.py
app/services/: rag_runtime.py  security.py
app/templates/auth/: index.html
config/: default.yaml  fast.yaml  quality.yaml
data/demo_docs/: architecture_notes.md  deploy.md
data/eval/: eval_dataset.jsonl
rag/: config.py  embeddings.py  generation.py  ingestion.py  logging_utils.py  memory.py  rerank.py  retrieval.py  router.py  runtime.py  types.py
tests/: test_chunking.py  test_config.py  test_integration_ingest.py  test_router.py
